向上兼容JAVA 1.7 JDK